force-app/main/default/objects/Activismo_Respuesta_Encuesta__c/Activismo_Respuesta_Encuesta__c.object-meta.xml
<CustomObject>
    <label>Activismo Fiscalizacion</label>
    <nameField>
        <displayFormat>Resp-{000000}</displayFormat>
        <label>Activismo Respuesta Encuesta Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activismo Fiscalizaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>