force-app/main/default/objects/Activismo_Respuesta_Encuesta__c/fields/Email_encuestador__c.field-meta.xml
<CustomField>
    <fullName>Email_encuestador__c</fullName>
    <label>Email encuestador</label>
    <type>Email</type>
</CustomField>