force-app/main/default/objects/Activismo_Respuesta_Encuesta__c/fields/Orden__c.field-meta.xml
<CustomField>
    <fullName>Orden__c</fullName>
    <label>Orden</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>