force-app/main/default/objects/Activismo_Respuesta_Encuesta__c/fields/Votante_Encuesta__c.field-meta.xml
<CustomField>
    <fullName>Votante_Encuesta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Votante-Encuesta</label>
    <referenceTo>Votante__c</referenceTo>
    <relationshipName>Activismo_Respuestas_Encuestas</relationshipName>
    <type>Lookup</type>
</CustomField>