force-app/main/default/objects/Activismo_Respuesta_Encuesta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nro_Mesa__c</columns>
    <columns>Orden__c</columns>
    <columns>Votante_Encuesta__c</columns>
    <columns>Email_encuestador__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>